--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,7 @@
     "semi": "warn",
     "indent": ["warn", 2],
     "brace-style": ["warn", "1tbs"],
-    "comma-dangle": ["warn", "never"],
+    "comma-dangle": ["warn", "always-multiline"],
 
     "max-len": ["warn", {
       "code": 200,
